Criado através do Colab

--- a/ProjetoChatbotSistema.ipynb
+++ b/ProjetoChatbotSistema.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPKon5tqTEfpwknrLSBTg5n",
+      "authorship_tag": "ABX9TyOgxPgTV1H2HRVP0lvZMMXz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,9 +57,10 @@
       "source": [
         "#Configurações iniciais\n",
         "import google.generativeai as genai\n",
-        "\n",
-        "GOOGLE_API_KEY=\"AIzaSyBNV-akP-iiCW2WAuRS7lqwU1cax1GVFLU\"\n",
-        "genai.configure(api_key=GOOGLE_API_KEY)"
+        "from google.colab import userdata\n",
+        "# criando artificio para não enviar chave api para o github\n",
+        "api_key = userdata.get(\"SECRET_KEY\")\n",
+        "genai.configure(api_key=api_key)"
       ]
     },
     {
@@ -102,7 +103,7 @@
         "    'HATE': 'BLOCK_NONE',\n",
         "    'HARASSMENT': 'BLOCK_NONE',\n",
         "    'SEXUAL' : 'BLOCK_NONE',\n",
-        "    'DANGEROUS' : 'BLOCK_NONE'\n",
+        "    'DANGEROUS' : 'BLOCK_NONE',\n",
         "    }"
       ]
     },
