--- a/ProjetoChatbotSistema.ipynb
+++ b/ProjetoChatbotSistema.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOgxPgTV1H2HRVP0lvZMMXz",
+      "authorship_tag": "ABX9TyPCuKAvMslTO9CTt7wayFV6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,173 +28,60 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "z3DuxWaNSWax"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "nFQLKQ6hfXch"
-      },
-      "outputs": [],
       "source": [
-        "#Instalando o SDK do Google\n",
-        "!pip install -q -U google-generativeai"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "IthzwfnAfcsi"
-      },
-      "outputs": [],
-      "source": [
-        "#Configurações iniciais\n",
+        "from flask import Flask, render_template\n",
+        "from flask_socketio import SocketIO, send, emit\n",
+        "\n",
+        "app = Flask(__name__)\n",
+        "app.config[\"SECRET\"] = \"ajuiahfa78fh9f78shfs768fgs7f6\"\n",
+        "app.config[\"DEBUG\"] = True\n",
+        "socketio = SocketIO(app, cors_allowed_origins=\"*\")\n",
+        "\n",
+        "# Importe a biblioteca do chatbot aqui\n",
         "import google.generativeai as genai\n",
-        "from google.colab import userdata\n",
-        "# criando artificio para não enviar chave api para o github\n",
-        "api_key = userdata.get(\"SECRET_KEY\")\n",
-        "genai.configure(api_key=api_key)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "iD3ihugymWBt"
-      },
-      "outputs": [],
-      "source": [
-        "#Listando os modelos disponíveis\n",
-        "for m in genai.list_models():\n",
-        "  if 'generateContent' in m.supported_generation_methods:\n",
-        "    print(m.name)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "O1ochaeyDn_o"
-      },
-      "outputs": [],
-      "source": [
+        "\n",
+        "# Configurações do chatbot\n",
+        "GOOGLE_API_KEY = \"CHAVE API\"\n",
+        "genai.configure(api_key=GOOGLE_API_KEY)\n",
+        "\n",
         "generation_config = {\n",
         "  \"candidate_count\": 1,\n",
         "  \"temperature\": 0.5,\n",
-        "}"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "jwBv7DofDofw"
-      },
-      "outputs": [],
-      "source": [
-        "safety_settings={\n",
+        "}\n",
+        "\n",
+        "safety_settings = {\n",
         "    'HATE': 'BLOCK_NONE',\n",
         "    'HARASSMENT': 'BLOCK_NONE',\n",
-        "    'SEXUAL' : 'BLOCK_NONE',\n",
-        "    'DANGEROUS' : 'BLOCK_NONE',\n",
-        "    }"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "NIiSs1R5mVJE"
-      },
-      "outputs": [],
-      "source": [
-        "model = genai.GenerativeModel(model_name='gemini-1.0-pro',\n",
-        "                                  generation_config=generation_config,\n",
-        "                                  safety_settings=safety_settings,)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "vrRjhT2rlrU_"
-      },
-      "outputs": [],
-      "source": [
-        "response = model.generate_content(\"Que empresa criou o modelo de IA Gemini?\")\n",
-        "response.text"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "KpaQ6hm5f2_J"
-      },
-      "outputs": [],
-      "source": [
-        "chat = model.start_chat(history=[])\n",
+        "    'SEXUAL': 'BLOCK_NONE',\n",
+        "    'DANGEROUS': 'BLOCK_NONE'\n",
+        "}\n",
         "\n",
-        "prompt = input('Esperando prompt: ')\n",
+        "model = genai.GenerativeModel(\n",
+        "    model_name='gemini-1.0-pro',\n",
+        "    generation_config=generation_config,\n",
+        "    safety_settings=safety_settings\n",
+        ")\n",
         "\n",
-        "while prompt != \"fim\":\n",
-        "  response = chat.send_message(prompt)\n",
-        "  print(\"Resposta:\", response.text, '\\n\\n')\n",
-        "  prompt = input('Esperando prompt: ')"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "XLAniTTDhHNW"
-      },
-      "outputs": [],
-      "source": [
-        "chat"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "sd8mvW9KghTf"
-      },
-      "outputs": [],
-      "source": [
-        "chat.history"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "dAcbPBocgzeX"
-      },
-      "outputs": [],
-      "source": [
-        "#Melhorando a visualização\n",
-        "#Código disponível em https://ai.google.dev/tutorials/python_quickstart#import_packages\n",
-        "import textwrap\n",
-        "from IPython.display import display\n",
-        "from IPython.display import Markdown\n",
+        "@app.route(\"/\")\n",
+        "def home():\n",
+        "    return render_template(\"index.html\")\n",
         "\n",
-        "def to_markdown(text):\n",
-        "  text = text.replace('•', '  *')\n",
-        "  return Markdown(textwrap.indent(text, '> ', predicate=lambda _: True))\n",
+        "@socketio.on(\"message\")\n",
+        "def gerenciar_mensagens(mensagem):\n",
+        "    print(f\"Mensagem: {mensagem}\")\n",
         "\n",
-        "#Imprimindo o histórico\n",
-        "for message in chat.history:\n",
-        "  display(to_markdown(f'**{message.role}**: {message.parts[0].text}'))\n",
-        "  print('-------------------------------------------')"
-      ]
+        "    # Adicionando a resposta do chatbot\n",
+        "    response = model.generate_content(mensagem)\n",
+        "    emit(\"message\", response.text)  # Envie a mensagem para o cliente específico que a enviou\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    socketio.run(app, host='localhost', allow_unsafe_werkzeug=True)\n"
+      ],
+      "metadata": {
+        "id": "-RbA1_xUt2by"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
